# phd-thesis

./: .gitignore  00_frontmatter.tex  05_introduction.tex  10_bayesian_ml.tex  10_introduction.tex  20_efficient_gps.tex  20_theory.tex  30_composite_problems.tex  30_deep_gps.tex  40_composite_tasks.tex  40_data_association.tex  50_conclusion.tex  50_nonlinear_alignments.tex  60_appendix.tex  60_interpretable_rl.tex  70_composite_tasks.tex  80_discussion.tex  90_appendix.tex  Makefile  OUTLINE.md  latexmkrc  phd_thesis.tex  zotero_export.bib
figures/: Makefile  agent_environment_interaction.tex  choicenet_attrib.tex  choicenet_attrib_40.tex  choicenet_data.tex  choicenet_data_40.tex  choicenet_data_intro.tex  choicenet_joint.tex  choicenet_joint_40.tex  dampened_sine_decomposition_dgp.tex  dampened_sine_decomposition_mo_gp.tex  dampened_sine_decomposition_ours.tex  dampened_sine_decomposition_shallow_gp.tex  dampened_sine_decomposition_true.tex  data_association_graphical_model.tex  gp_posterior_posterior.tex  gp_posterior_prior.tex  gp_prior_arccos_1.tex  gp_prior_arccos_2.tex  gp_prior_linear.tex  gp_prior_rbf.tex  gp_prior_rbf_amplitude.tex  gp_prior_rbf_lengthscale.tex  graphical_model_rl.tex  graphical_model_rl_deep_gp.tex  intro_model_black_box.tex  intro_model_nature.tex  intro_model_structured.tex  intro_model_white_box.tex  latexmkrc  mountaincar_policy_01.tex  mountaincar_policy_10.tex  mountaincar_policy_25.tex  mountaincar_system.tex  polynoms_bayes_broad.tex  (+55 more)
notebooks/: 10_polynomial_interpolation.ipynb  20_arccos_kernel.ipynb  plot_export.py  pyproject.toml
(+114 files in other folders)
